--- a/Practica 2/Vagrantfile
+++ b/Practica 2/Vagrantfile
@@ -13,15 +13,19 @@ Vagrant.configure("2") do |config|
     node1.vm.box = "bento/ubuntu-20.04"
     node1.vm.hostname = "manager.local.io"
     node1.vm.network "private_network", ip: "192.168.56.2"
-    node1.vm.boot_timeout = 600
+    node1.vm.synced_folder "src/", "/containers",
+        owner: "vagrant", group: "vagrant"
     node1.vm.provision "shell", path: "deployLxd.sh"
-    node1.vm.provision "shell", path: "runLxd.sh", privileged: false
+    #node1.vm.provision "shell", path: "runLxd.sh", privileged: false
   end
 
   config.vm.define "node2" do |node2|
     node2.vm.box = "bento/ubuntu-20.04"
     node2.vm.hostname = "client.local.io"
     node2.vm.network "private_network", ip: "192.168.56.3"
+    node2.vm.provision "shell", path: "deployLxd.sh"
     node2.vm.provision "shell", path: "sshclient.sh", privileged: false
+    node2.vm.synced_folder "src/", "/containers",
+        owner: "vagrant", group: "vagrant"
   end 
 end
