--- a/Practica 3/Vagrantfile
+++ b/Practica 3/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 $install_puppet = <<-PUPPET
-sudo apt install update -y
+sudo apt update -y
 sudo apt install -y puppet
 PUPPET
 
@@ -30,10 +30,10 @@ Vagrant.configure("2") do |config|
     manager.vm.network "private_network", ip: "192.168.56.2"
     manager.vm.synced_folder "ansible/notebooks", "/notebooks",
       owner: "vagrant", group: "vagrant"
-    manager.vm.provision "shell", path: "script.sh"
     manager.vm.provision "shell", inline: $install_puppet
     manager.vm.provision "shell", inline: $install_ansible
     manager.vm.provision "shell", inline: $install_galaxy, privileged: false
+    manager.vm.provision "shell", path: "script.sh"
 
     manager.vm.provision :puppet do |puppet|
       puppet.manifests_path = "puppet/manifests"
