--- a/Microproyecto 1/cluster-config/manager-preseed.yml
+++ b/Microproyecto 1/cluster-config/manager-preseed.yml
@@ -1,6 +1,7 @@
 config:
   core.https_address: 192.168.56.2:8443
   core.trust_password: vagrant
+  images.auto_update_interval: 15
 networks:
 - config:
     bridge.mode: fan
