--- a/Microproyecto 1/Vagrantfile
+++ b/Microproyecto 1/Vagrantfile
@@ -1,6 +1,19 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+$deploy_sshpass = <<-SSHPASS
+sudo apt install sshpass -y
+SSHPASS
+
+$install_keys = <<-KEYSPERMISSIONS
+ssh-keygen -t rsa -b 4096 -f /home/vagrant/.ssh/id_rsa -q -P ""
+chmod 600 /home/vagrant/.ssh/id_rsa
+chmod 600 /home/vagrant/.ssh/id_rsa.pub
+sshpass -p vagrant ssh-copy-id -i /home/vagrant/.ssh/id_rsa -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" vagrant@192.168.56.2 
+sshpass -p vagrant ssh-copy-id -i /home/vagrant/.ssh/id_rsa -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" vagrant@192.168.56.3 
+sshpass -p vagrant ssh-copy-id -i /home/vagrant/.ssh/id_rsa -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" vagrant@192.168.56.4 
+KEYSPERMISSIONS
+
 Vagrant.configure("2") do |config|
 
   if Vagrant.has_plugin? "vagrant-vbguest"
@@ -25,6 +38,10 @@ Vagrant.configure("2") do |config|
     manager.vm.box = "bento/ubuntu-20.04"
     manager.vm.hostname = "manager.local.io"
     manager.vm.network "private_network", ip: "192.168.56.2"
+
+    manager.vm.provision "shell", inline: $deploy_sshpass
+    manager.vm.provision "shell", inline: $install_keys, privileged: false
+    
 
     manager.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "playbook.yml"
