--- a/Microproyecto 1/Vagrantfile
+++ b/Microproyecto 1/Vagrantfile
@@ -39,14 +39,14 @@ Vagrant.configure("2") do |config|
     manager.vm.hostname = "manager.local.io"
     manager.vm.network "private_network", ip: "192.168.56.2"
 
-    manager.vm.provision "shell", inline: $deploy_sshpass
-    manager.vm.provision "shell", inline: $install_keys, privileged: false
+    #manager.vm.provision "shell", inline: $deploy_sshpass
+    #manager.vm.provision "shell", inline: $install_keys, privileged: false
     
 
     manager.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "playbook.yml"
       ansible.install        = true
-      #ansible.verbose        = true
+      ansible.verbose        = true
       ansible.limit          = "all" # or only "nodes" group, etc.
       ansible.inventory_path = "ansible/inventory"
     end
