--- a/Microproyecto 1/playbook.yml
+++ b/Microproyecto 1/playbook.yml
@@ -18,6 +18,28 @@
     - name: Install module Manage LXD instances
       shell: ansible-galaxy collection install community.general
 
+    - name: Install sshpass
+      become: yes
+      apt:
+        name: sshpass
+        state: present
+
+    # - name: generate ssh keys "{{ssh_key_filename}}"
+    #   openssh_keypair:
+    #     path: "~/.ssh/{{ssh_key_filename}}"
+    #     type: rsa
+    #     size: 4096
+    #     state: present
+    #     force: no
+    
+    # - name: copy keys
+    #   shell: |
+    #     chmod 600 /home/vagrant/.ssh/{{ssh_key_filename}}
+    #     chmod 600 /home/vagrant/.ssh/{{ssh_key_filename}}.pub
+    #     sshpass -p vagrant ssh-copy-id -i /home/vagrant/.ssh/{{ssh_key_filename}} -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" vagrant@192.168.56.2
+    #     sshpass -p vagrant ssh-copy-id -i /home/vagrant/.ssh/{{ssh_key_filename}} -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" vagrant@192.168.56.3 
+    #     sshpass -p vagrant ssh-copy-id -i /home/vagrant/.ssh/{{ssh_key_filename}} -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" vagrant@192.168.56.4 
+      
 - hosts: manager
   gather_facts: yes
 
@@ -239,6 +261,3 @@
       become: yes
       shell: lxc exec u{{item}} -- sed -i 's/u1/u{{item}}/g' /var/www/html/index.html 
       with_items: [2,3,4,5,6]
-
-    
-
