--- a/Microproyecto 1/Vagrantfile
+++ b/Microproyecto 1/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant.configure("2") do |config|
     manager.vm.provision "ansible_local" do |ansible|
       ansible.playbook = "playbook.yml"
       ansible.install        = true
-      ansible.verbose        = true
+      #ansible.verbose        = true
       ansible.limit          = "all" # or only "nodes" group, etc.
       ansible.inventory_path = "ansible/inventory"
     end
