--- a/Practica 8/app/Dockerfile
+++ b/Practica 8/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.6
 WORKDIR /app
 COPY requirements.txt /app
-RUN python -m pip install --upgrade pip
+#RUN python -m pip install --upgrade pip
 RUN pip install -r ./requirements.txt
 
 COPY app.py /app
