--- a/Practica 8/app/deployment.yaml
+++ b/Practica 8/app/deployment.yaml
@@ -1,39 +1,20 @@
 apiVersion: apps/v1
-
 kind: Deployment
-
 metadata:
-
   name: kubermatic-dl-deployment
-
 spec:
-
   selector:
-
     matchLabels:
-
       app: kubermatic-dl
-
-  replicas: 3
-
+  replicas: 2
   template:
-
     metadata:
-
       labels:
-
         app: kubermatic-dl
-
     spec:
-
      containers:
-
-     - name: kubermatic-dl
-
-       image: kubermatic00/kubermatic-dl:latest
-
-       imagePullPolicy: Always
-
-       ports:
-
-       - containerPort: 8080
+       - name: kubermatic-dl
+         image: zeroacrng.azurecr.io/kubermatic-dl:v1
+         imagePullPolicy: Always
+         ports:
+          - containerPort: 8080
